<resources>
    <string name="app_name">Sous-Chef</string>
    <string name="menu_food">Food</string>
    <string name="menu_recipe">Recipe</string>
    <string name="menu_settings">Settings</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="recipe_add_button">Add a Recipe</string>
    <string name="recipe_popup_name">Name</string>
    <string name="recipe_popup_name_hint">Name of Recipe</string>
    <string name="recipe_popup_instructions_hint">Instructions of Recipe</string>
    <string name="recipe_popup_instructions">Instructions</string>
    <string name="recipe_popup_foods">Food (Food, Quant, Unit, Food, Quant, Unit…)</string>
    <string name="recipe_popup_foods_hint">Foods in Recipe</string>
    <string name="cancel_recipe_button">Cancel</string>
    <string name="save_recipe_button">Save</string>
    <string name="add_recipe_popup">Add Recipe</string>
    <string name="foodbutton">foodButton</string>

    <string name="settings">Settings</string>
    <string name="change_font_size_this_text_is_example">Change Font Size(this text is example)</string>
    <string name="amount_of_recipes_min_5_max_20">Amount of Recipes (min: 5, max: 20)</string>
    <string name="nofood">You have no food!</string>
    <string name="are_you_sure_you_want_to_delete_this_food">Are you sure you want to delete this food?</string>
    <string name="delete_food">Delete</string>
    <string name="foods">Foods</string>
    <string name="popuptitle">Add Your Food!</string>
    <string name="food_name">Food Name</string>
    <string name="quantity">Quantity</string>
    <string name="unit">Unit</string>
    <string name="year">Year</string>
    <string name="month">Month</string>
    <string name="day">Day</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="optional">optional</string>
</resources>