<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent">
    <EditText
            android:layout_width="345dp"
            android:layout_height="41dp"
            android:inputType="textPersonName"
            android:text="@string/recipe_popup_name"
            android:ems="20"
            android:id="@+id/recipe_popup_name"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/add_recipe_popup"
            android:autofillHints="food"
            android:hint="@string/recipe_popup_name_hint" android:layout_marginTop="76dp"
            android:layout_marginLeft="16dp" android:layout_marginRight="16dp"/>
    <Button
            android:text="@string/save_recipe_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/save_recipe_button"
            android:layout_marginTop="44dp"
            app:layout_constraintTop_toBottomOf="@+id/recipe_popup_instructions"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"/>
    <EditText
            android:layout_width="345dp"
            android:layout_height="41dp"
            android:inputType="textPersonName"
            android:text="@string/recipe_popup_foods"
            android:ems="20"
            android:id="@+id/recipe_popup_foods"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:autofillHints="food"
            android:hint="@string/recipe_popup_foods_hint" app:layout_constraintTop_toBottomOf="@+id/recipe_popup_name"
            android:layout_marginTop="40dp"
            android:layout_marginLeft="16dp" android:layout_marginRight="16dp"/>
    <TextView
            android:text="@string/add_recipe_popup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/add_recipe_popup"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintBottom_toTopOf="@+id/recipe_popup_name"
            app:layout_constraintHorizontal_bias="0.498" app:layout_constraintVertical_bias="0.403"
            android:textSize="48sp"/>
    <Button
            android:text="@string/cancel_recipe_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/cancel_recipe_button"
            android:layout_marginTop="44dp"
            app:layout_constraintTop_toBottomOf="@+id/recipe_popup_instructions"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"/>
    <EditText
            android:layout_width="345dp"
            android:layout_height="41dp"
            android:inputType="textPersonName"
            android:text="@string/recipe_popup_instructions"
            android:ems="20"
            android:id="@+id/recipe_popup_instructions"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:autofillHints="food"
            android:hint="@string/recipe_popup_instructions_hint"
            app:layout_constraintTop_toBottomOf="@+id/recipe_popup_foods"
            android:layout_marginTop="36dp"
            android:layout_marginLeft="16dp" android:layout_marginRight="16dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>