<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent" android:orientation="vertical"
                                                   >

    <TextView android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/popuptitle"
              app:layout_constraintEnd_toEndOf="parent"
              app:layout_constraintStart_toStartOf="parent"
              app:layout_constraintTop_toTopOf="parent"
              app:layout_constraintBottom_toBottomOf="parent"
              app:layout_constraintVertical_bias="0.129" android:fontFamily="sans-serif-smallcaps"
              android:textSize="30sp"
              android:id="@+id/title" app:layout_constraintHorizontal_bias="0.49"/>
    <EditText
            android:id="@+id/foodname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/title"
            android:textSize="24sp"
            android:hint="@string/food_name"
            android:gravity="center_horizontal"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"/>
    <EditText
            android:id="@+id/quantity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/foodname"
            tools:layout_editor_absoluteX="-1dp"
            android:textSize="24sp"
            android:hint="@string/quantity"
            android:gravity="center_horizontal"
    />
    <EditText
            android:id="@+id/unit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/quantity"
            tools:layout_editor_absoluteX="-1dp"
            android:textSize="24sp"
            android:hint="@string/unit"
            android:gravity="center_horizontal"
    />
    <EditText
            android:id="@+id/year"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/unit"
            tools:layout_editor_absoluteX="-1dp"
            android:textSize="24sp"
            android:inputType="number"
            android:hint="@string/year"
            android:gravity="center_horizontal"
    />
    <EditText
            android:id="@+id/month"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/year"
            tools:layout_editor_absoluteX="-1dp"
            android:textSize="24sp"
            android:inputType="number"
            android:hint="@string/month"
            android:gravity="center_horizontal"
    />
    <EditText
            android:id="@+id/day"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/month"
            tools:layout_editor_absoluteX="-1dp"
            android:textSize="24sp"
            android:inputType="number"
            android:hint="@string/day"
            android:gravity="center_horizontal"
    />
    <Button
            android:id="@+id/saveButton"
            android:text="@string/save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/day"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.793"
            app:layout_constraintVertical_bias="0.164"
            android:textSize="24sp"/>
    <Button
            android:id="@+id/cancelButton"
            android:text="@string/cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/day"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.177"
            app:layout_constraintVertical_bias="0.164"
            android:textSize="24sp"/>

</androidx.constraintlayout.widget.ConstraintLayout>