<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent"
                                                   android:orientation="vertical">
    <TextView android:layout_width="match_parent" android:layout_height="wrap_content"
              app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
              app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="48dp"
              app:layout_constraintHorizontal_bias="0.498"
              android:textSize="24sp"
              android:text="@string/are_you_sure_you_want_to_delete_this_food" android:id="@+id/textView3"/>


    <Button android:layout_height="wrap_content" android:layout_width="wrap_content"
            android:id="@+id/confirmDeleteFood" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp" app:layout_constraintBottom_toBottomOf="parent"
            android:text="@string/delete_food" android:layout_marginTop="24dp" app:layout_constraintTop_toBottomOf="@+id/textView3"
            app:layout_constraintVertical_bias="0.963"/>
    <Button android:layout_height="wrap_content" android:layout_width="wrap_content"
            android:id="@+id/cancelDeleteFood" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp" android:text="@string/cancel" android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/textView3" app:layout_constraintVertical_bias="0.934"/>

</androidx.constraintlayout.widget.ConstraintLayout>
